<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   
    android:gravity="bottom"
   android:background="@drawable/icon_"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.91"
        android:text="About Us"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
         />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/straboutus"

        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strdeveloper1"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/strdeveloper2"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/strdeveloper3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic"
        android:layout_marginBottom="10dp"/>



</LinearLayout>