<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
      android:background="@drawable/icon_"
     >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
      
        android:clickable="true"
        android:measureWithLargestChild="false"
        android:orientation="vertical"
        android:splitMotionEvents="true" >

        <!-- android:background="@android:color/white" api level 14 is required -->

    <Button
        android:id="@+id/btnEmergency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="enterEmergencyContact"
        android:text="Emergency Contacts"
        android:textSize="@dimen/wel2" />

    <Button
       
        android:id="@+id/btnFire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/welcomButtons"
        android:paddingTop="@dimen/welcomButtons"
        android:onClick="enterRadiusFire"
        android:text="@string/wel_button3"       
        android:textSize="@dimen/wel2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="enterRadiusCafe"
            android:paddingTop="@dimen/welcomButtons"
            android:paddingBottom="@dimen/welcomButtons"
            android:text="Cafe"
            android:textSize="@dimen/wel2"
            android:visibility="gone" />

    <Button
        android:id="@+id/btnViewMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/welcomButtons"
        android:paddingTop="@dimen/welcomButtons"
        android:text="@string/wel_button2"
        android:onClick="enterRadiusHospital"
        android:textSize="@dimen/wel2" />

    <Button
        android:id="@+id/btnshow_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/welcomButtons"
        android:paddingTop="@dimen/welcomButtons"
        android:text="@string/wel_button1"
        android:onClick="enterRadiusPolice"
        android:textSize="@dimen/wel2" />

    <Button
        android:id="@+id/btnMyLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="My Location"
        android:textSize="@dimen/wel2" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scream"
            android:text="Scream"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="stopScream"
            android:text="Stop Scream"
            android:visibility="gone" />

        <Button
        android:id="@+id/btnPanicAlert"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="Panic Alert" 
        android:onClick="sendPanicAlert"
        android:textSize="@dimen/wel2"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:onClick="refresh"
        android:layout_height="wrap_content"
        android:text="Refresh" />



        <Button
        android:id="@+id/btnAboutUs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="About Us"
      android:onClick="aboutus"
        
        android:textSize="@dimen/wel2" />

      <TextView
          android:id="@+id/tvLocation"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textColor="@android:color/white"
          android:textAppearance="?android:attr/textAppearanceLarge"
       />

</LinearLayout>

</ScrollView>
